finalizando curso jquery2

--- a/jquery/index.html
+++ b/jquery/index.html
@@ -4,6 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="carrinho.css">
 </head>
 <body>
+	<h2>Geral</h2>
+	<a href="" id="esconde-propagandas" class="altera-propagandas">Esconder Propagandas</a>
+	<br>
+	<a href="" id="mostra-propagandas" class="altera-propagandas">Mostra Propagandas</a>
 	<div class="carrinho">
 		<h2>Carrinho entrega em Sao Paulo</h2>
 		<table>
@@ -14,6 +18,7 @@
 					<td>Quantidade</td>
 					<td>Valor</td>
 					<td>Total</td>
+					<td><td>
 				</tr>
 			</thead>
 			<tbody>
@@ -76,7 +81,7 @@
 			</tbody>
 		</table>
 	
-		<div>
+		<div id="resumo">
 			Valor total: <span class="valor-total">0</span>
 			<br/>
 			Quantidade de itens distintos:
@@ -87,6 +92,7 @@
 	        <input type="button" value="Undo" class="undo">
 		</div>
 	</div>
+
 
 	<div class="carrinho">
 		<h2>Carrinho entrega em Vitória</h2>
